// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross-country detection > pins the candidate sets for the current-series schemes 1`] = `
"1234 BCD     VALID ES:ES_ORDINARY_CURRENT -> "1234 BCD"
R 1234 BCD   VALID ES:ES_TRAILER_CURRENT -> "R 1234 BCD"
C 1234 BCD   VALID ES:ES_MOPED_CURRENT -> "C 1234 BCD"
CD 12 345    VALID ES:ES_DIPLOMATIC_CD -> "CD 12 345"
OI12345      AMBIGUOUS AMBIGUOUS_COUNTRY (4) DK:DK_ORDINARY="OI 12345" ES:ES_INTERNATIONAL_OI="OI 12 345" ES:ES_INTERNATIONAL_OI="OI 123 45" NO:NO_ORDINARY="OI 12345"
M-1234-AB    VALID BG:BG_ORDINARY -> "M 1234 AB"
BAB123       AMBIGUOUS AMBIGUOUS_COUNTRY (9) AT:AT_WUNSCHKENNZEICHEN="B-AB123" AT:AT_WUNSCHKENNZEICHEN="BA-B123" DE:DE_STANDARD="B-AB 123" DE:DE_STANDARD="BA-B 123" FI:FI_ORDINARY="BAB-123" GR:GR_MOTORCYCLE="BAB 123" IT:IT_OPERATING_MACHINE="BA B 123" LT:LT_ORDINARY="BAB 123" SE:SE_ORDINARY="BAB 123"
B-AB 123     VALID DE:DE_STANDARD -> "B-AB 123"
AA-123-AA    AMBIGUOUS AMBIGUOUS_COUNTRY (3) FR:FR_SIV_CURRENT="AA-123-AA" IT:IT_CURRENT="AA 123 AA" SK:SK_ORDINARY="AA 123AA"
AQ-123-AB    AMBIGUOUS AMBIGUOUS_COUNTRY (2) FR:FR_SIV_CURRENT="AQ-123-AB" SK:SK_ORDINARY="AQ 123AB"
00-00-AA     AMBIGUOUS AMBIGUOUS_COUNTRY (2) EE:EE_TRACTOR="0000 AA" LT:LT_EXPORT="0000 AA"
0000AA       AMBIGUOUS AMBIGUOUS_COUNTRY (2) EE:EE_TRACTOR="0000 AA" LT:LT_EXPORT="0000 AA"
AA 00 AA     VALID PT:PT_GENERAL_CURRENT -> "AA 00 AA"
B-XY 1234    VALID DE:DE_STANDARD -> "B-XY 1234"
1-ABC-123    VALID BE:BE_STANDARD_CURRENT -> "1-ABC-123"
Q-ABC-123    VALID BE:BE_TRAILER_CURRENT -> "Q-ABC-123"
WA-25-ABC    AMBIGUOUS AMBIGUOUS_COUNTRY (2) BE:BE_TEMPORARY_TRANSIT="WA-25-ABC" PT:PT_INDUSTRIAL_CURRENT="WA 25 AB C"
X5FJPD       AMBIGUOUS AMBIGUOUS_COUNTRY (2) IT:IT_MOPED="X5FJPD" PL:PL_INDIVIDUAL="X5 FJPD"
053 EEN      VALID EE:EE_STANDARD -> "053 EEN"
CJ 01 XYZ    VALID RO:RO_ORDINARY -> "CJ 01 XYZ"
CA 1234 AB   VALID BG:BG_ORDINARY -> "CA 1234 AB"
SE1234       AMBIGUOUS AMBIGUOUS_COUNTRY (7) AT:AT_WUNSCHKENNZEICHEN="S-E1234" DE:DE_STANDARD="S-E 1234" DK:DK_ORDINARY="SE 1234" LV:LV_ORDINARY="SE-1234" NO:NO_ORDINARY_OTHER="SE 1234" PL:PL_ORDINARY_MOTORCYCLE="SE 1234" PT:PT_TRAILER="SE 1234"
AB 12345     AMBIGUOUS AMBIGUOUS_COUNTRY (5) DK:DK_ORDINARY="AB 12345" IT:IT_MOTORCYCLE="AB 12345" NO:NO_ORDINARY="AB 12345" PL:PL_ORDINARY_CAR="AB 12345" RO:RO_PROVISIONAL="AB 12345""
`;

exports[`cross-country detection > pins the candidate sets with legacy series opted in 1`] = `
"1234 BCD     VALID ES:ES_ORDINARY_CURRENT -> "1234 BCD"
R 1234 BCD   VALID ES:ES_TRAILER_CURRENT -> "R 1234 BCD"
C 1234 BCD   VALID ES:ES_MOPED_CURRENT -> "C 1234 BCD"
CD 12 345    VALID ES:ES_DIPLOMATIC_CD -> "CD 12 345"
OI12345      AMBIGUOUS AMBIGUOUS_COUNTRY (4) DK:DK_ORDINARY="OI 12345" ES:ES_INTERNATIONAL_OI="OI 12 345" ES:ES_INTERNATIONAL_OI="OI 123 45" NO:NO_ORDINARY="OI 12345"
M-1234-AB    AMBIGUOUS AMBIGUOUS_COUNTRY (2) BG:BG_ORDINARY="M 1234 AB" ES:ES_PROVINCIAL_1971_2000="M-1234-AB"
BAB123       AMBIGUOUS AMBIGUOUS_COUNTRY (12) AT:AT_WUNSCHKENNZEICHEN="B-AB123" AT:AT_WUNSCHKENNZEICHEN="BA-B123" BE:BE_ORDINARY_1973_2008="BAB-123" CZ:CZ_ORDINARY="BAB 123" DE:DE_STANDARD="B-AB 123" DE:DE_STANDARD="BA-B 123" FI:FI_ORDINARY="BAB-123" GR:GR_MOTORCYCLE="BAB 123" HU:HU_ORDINARY_2004="BAB-123" IT:IT_OPERATING_MACHINE="BA B 123" LT:LT_ORDINARY="BAB 123" SE:SE_ORDINARY="BAB 123"
B-AB 123     VALID DE:DE_STANDARD -> "B-AB 123"
AA-123-AA    AMBIGUOUS AMBIGUOUS_COUNTRY (3) FR:FR_SIV_CURRENT="AA-123-AA" IT:IT_CURRENT="AA 123 AA" SK:SK_ORDINARY="AA 123AA"
AQ-123-AB    AMBIGUOUS AMBIGUOUS_COUNTRY (2) FR:FR_SIV_CURRENT="AQ-123-AB" SK:SK_ORDINARY="AQ 123AB"
00-00-AA     AMBIGUOUS AMBIGUOUS_COUNTRY (2) NL:NL_SIDECODE_2="00-00-AA" PT:PT_GENERAL_1992_2005="00-00-AA"
0000AA       AMBIGUOUS AMBIGUOUS_COUNTRY (5) CZ:CZ_ORDINARY="000 0AA" EE:EE_TRACTOR="0000 AA" LT:LT_EXPORT="0000 AA" NL:NL_SIDECODE_2="00-00-AA" PT:PT_GENERAL_1992_2005="00-00-AA"
AA 00 AA     VALID PT:PT_GENERAL_CURRENT -> "AA 00 AA"
B-XY 1234    VALID DE:DE_STANDARD -> "B-XY 1234"
1-ABC-123    VALID BE:BE_STANDARD_CURRENT -> "1-ABC-123"
Q-ABC-123    VALID BE:BE_TRAILER_CURRENT -> "Q-ABC-123"
WA-25-ABC    AMBIGUOUS AMBIGUOUS_COUNTRY (2) BE:BE_TEMPORARY_TRANSIT="WA-25-ABC" PT:PT_INDUSTRIAL_CURRENT="WA 25 AB C"
X5FJPD       AMBIGUOUS AMBIGUOUS_COUNTRY (3) CZ:CZ_ORDINARY="X5F JPD" IT:IT_MOPED="X5FJPD" PL:PL_INDIVIDUAL="X5 FJPD"
053 EEN      AMBIGUOUS AMBIGUOUS_COUNTRY (3) BE:BE_ORDINARY_2008_2010="053-EEN" CZ:CZ_ORDINARY="053 EEN" EE:EE_STANDARD="053 EEN"
CJ 01 XYZ    VALID RO:RO_ORDINARY -> "CJ 01 XYZ"
CA 1234 AB   AMBIGUOUS AMBIGUOUS_COUNTRY (2) BG:BG_ORDINARY="CA 1234 AB" ES:ES_PROVINCIAL_1971_2000="CA-1234-AB"
SE1234       AMBIGUOUS AMBIGUOUS_COUNTRY (12) AT:AT_WUNSCHKENNZEICHEN="S-E1234" CZ:CZ_ORDINARY="SE1 234" DE:DE_STANDARD="S-E 1234" DK:DK_ORDINARY="SE 1234" ES:ES_PROVINCIAL_1900_1971="SE-1234" LV:LV_ORDINARY="SE-1234" NL:NL_SIDECODE_1="SE-12-34" NO:NO_ORDINARY_OTHER="SE 1234" PL:PL_ORDINARY_MOTORCYCLE="SE 1234" PT:PT_GENERAL_UNTIL_1992="SE-12-34" PT:PT_TRAILER="SE 1234" SK:SK_SPECIAL_S="S E1234"
AB 12345     AMBIGUOUS AMBIGUOUS_COUNTRY (6) DK:DK_ORDINARY="AB 12345" ES:ES_PROVINCIAL_1900_1971="AB-12345" IT:IT_MOTORCYCLE="AB 12345" NO:NO_ORDINARY="AB 12345" PL:PL_ORDINARY_CAR="AB 12345" RO:RO_PROVISIONAL="AB 12345""
`;
